  if the warnings setting was disabled
- Remove custom game creation, if you have an ongoing custom game make
  sure to finish it before updating or you will lose it
- Save printed games to their own folder
- Save a copy of the puzzle when using "Print Current Puzzle"
- Add mnemonics to print multiple dialog and game completed dialog
- In print multiple dialog:
  Mirror print button with start game button
  Use only the latest played difficulty to preselect choices
  Don't allow non numeric characters in the spin row
  Fix capitalization
- Update translations:
  Jiri Grönroos (fi); Ekaterine Papava (ka); Pawan Chitrakar (ne);
  Juliano de Souza Camargo (pt_BR); Sergej A. (ru); Martin (sl); Anders
  Jonsson (sv); Yuri Chornoivan (uk); luming zh (zh_CN).

49.2 - October 17, 2025
==========================

- Fix the grid not being keyboard focusable after the first game (#122)

49.1 - October 10, 2025
==========================

- Fix arrow keys and WASD direction being reversed in RTL locales (#121)
- Fix earmark warnings not getting cleared up when disabling the setting

49.0 - September 12, 2025
==========================

- Updated translations:
  Bruce Cowan (en_GB); Jiri Grönroos (fi).

49.rc - August 29, 2025
==========================

- Restore long press behavior to v48
- Add button size workaround for gtk >= 4.19.2
- Fix fixed cells opening the picker
- Fix clear button sensitivity after undo/redo on the value picker
- Fix stuck focus during pause
- Updated translations:
  Daniel Rusek (cs); Asier Saratsua Garmendia (eu); Balázs Úr (hu).

49.beta - August 1, 2025
==========================

- Popdown the picker and unselect the grid on pausing
- Track keyboard input for focus handling with a 5 seconds timeout
- Fix clock not resuming on closing keyboard shortcuts
- Fix lock tooltip color in light mode
- Updated translations:
  Danial Behzadi (fa); Anders Jonsson (sv).

49.alpha - June 27, 2025
==========================
