@@ -13,6 +13,10 @@
 - Save printed games to their own folder
 - Save a copy of the puzzle when using "Print Current Puzzle"
 - Add mnemonics to print multiple dialog and game completed dialog
+- In game completed dialog:
+  Add "Change Difficulty" button
+  Shorten the winning string to "Puzzle Completed!" in most cases
+  Bind Escape to return to the start menu
 - In print multiple dialog:
   Mirror print button with start game button
   Use only the latest played difficulty to preselect choices
